Index page buttons and responsiveness fixed, other small responsiveness changes

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -45,7 +45,7 @@
         <div class="flex-h space-above">
             <img class="image left shadowed" src="images/homepage/1-client-img.png" alt="">
             <div>
-                <p>As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations on the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</p>
+                <p>As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations o the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</p>
                 <img data-aos="fade-up" src="images/homepage/1-client-button.png" alt="" class="img-button shadowed">
             </div>
         </div>
@@ -63,15 +63,15 @@
                 <div class="even-wrapper">
                     <div class="project-numbers">
                         <h1>9</h1>
-                        <h2>months</h2>
+                        <h2>MONTHS</h2>
                     </div>
                     <div class="project-numbers">
                         <h1>10</h1>
-                        <h2>methods</h2>
+                        <h2>METHODS</h2>
                     </div>
                     <div class="project-numbers">
                         <h1>3</h1>
-                        <h2>concepts</h2>
+                        <h2>CONCEPTS</h2>
                     </div>
                 </div>
             </div>
