Bug fixes as on Notion page, some small text changes throughout website

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/glossary.html
@@ -67,8 +67,10 @@
         <div class="section-title">Financial Terminology</div>
         <div class="section-title-line purple-bg"></div>
         <div class="smaller-section flex-h">
-            <div class="arrow-text h3 text-center">Concept Testing</div>
-            <div class="banner-paragraph">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</div>
+            <h3>Concept Testing</h3>
+        </div>
+        <div class="smaller-section flex-h">
+            <p>This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</p>
         </div>
     </div>
 </div>
