--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -185,7 +185,7 @@
                         <h2>Team Metrics for Success</h2>
                         <b2>Team metrics can be essential to traders. Traders and portfolio managers can figure out the team’s progress at a glance in-app. This is faster and more accurate than a self-generated report.</b2>
                         <div class="slideshow-img-wrapper">
-                          <img class="slideshow-img" src="images/ideation/fintech-startup.jpg">
+                          <img class="slideshow-img" src="images/trader-success.jpg">
                           <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
                         </div>
                         <div class="dots-wrapper">
@@ -248,9 +248,7 @@
                             <div class="label grey-text">Observation 2</div>
                             <div class="h3">Categorizing Ideas</div>
                             <ul class="bullet">
-                                <li>During sorting, three groupings came about:</li>
-                                <li>closure and reports, group feedback,</li>
-                                <li>motivating through animations and sound.</li>
+                                <li>During sorting, three groupings came about: closure and reports, group feedback, motivating through animations and sound.</li>
                             </ul>
                         </div>
                     </div>
@@ -347,7 +345,7 @@
         <div class="section-title">Concept Testing</div>
         <div class="section-title-line blue-bg"></div>
         <div class="smaller-section">Storyboarding allowed our team to conceptualize over three opportunity areas. Each of these areas came from the needs gathered from the previous generative methods.</div>
-        <!--        item-->
+        <!--item-->
         <div class="smaller-section container flex-h mobile-v">
             <img src="images/research/trading-team-square.jpg" class="flexblock-headshot image left"/>
             <div class="quote-bubble bg-white">
@@ -571,7 +569,7 @@
                         <div>
                             <div class="label grey-text">Observation 1</div>
                             <div class="h3">Storyboards to Screens</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>Well-liked storyboards were turned into low-fis</li>
                                 <li>Each storyboard became its own screen</li>
                                 <li>Low-fi screens were built as separate demos</li>
@@ -580,7 +578,7 @@
                         <div>
                             <div class="label grey-text">Observation 2</div>
                             <div class="h3">Proxy Testing</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>We tested our low-fi designs with proxy users</li>
                                 <li>We asked what specific info traders need in-app</li>
                                 <li>This guided the info added in mid-fi screens</li>
@@ -608,7 +606,7 @@
                         <div>
                             <div class="label grey-text">Observation 1</div>
                             <div class="h3">Uniform Look</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>We made all our low-fis use similar visuals and text</li>
                                 <li>Based on feedback, we made our screens modular</li>
                                 <li>Each could function as a tab in one application</li>
@@ -617,7 +615,7 @@
                         <div>
                             <div class="label grey-text">Observation 2</div>
                             <div class="h3">Ready for Mid-fi</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>After fixing visual unity, we decided to add context</li>
                                 <li>We consulted our clients to find reasonable data</li>
                                 <li>We changed our tab layout to fit the existing app</li>
@@ -644,7 +642,7 @@
                         <div>
                             <div class="label grey-text">Observation 1</div>
                             <div class="h3">Adding Context</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>After fixing the visual unity, we added content</li>
                                 <li>The content was based on Liquidnet's existing app</li>
                                 <li>More realistic text made our design more believable</li>
@@ -653,7 +651,7 @@
                         <div>
                             <div class="label grey-text">Observation 2</div>
                             <div class="h3">Showing Interactions</div>
-                            <ul class="tab-bullet blue">
+                            <ul>
                                 <li>We made multiple screens of each concept</li>
                                 <li>This showed intended interactions with it</li>
                                 <li>Hover-over and clicks were described in presentation</li>
