--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -91,19 +91,19 @@
                 <img src="images/homepage/3-process-icon1.svg" alt="" class="icon">
                 <div class="card-title red-text">Research Phase</div>
                 <div class="card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
-                <a data-aos="fade-up" href="old_research.html" class="button-solid red-bg">Read More</a>
+                <a data-aos="fade-up" href="research.html" class="button-solid red-bg">Read More</a>
             </div>
             <div class="card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon2.svg" alt="" class="icon">
                     <div class="card-title blue-text">Conceptual Phase</div>
                     <div class="card-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
-                    <a data-aos="fade-up" href="concept.html" class="button-solid blue-bg">Read More</a>
+                    <a data-aos="fade-up" href="ideation.html" class="button-solid blue-bg">Read More</a>
             </div>
             <div class="card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon3.svg" alt="" class="icon">
                     <div class="card-title purple-text">Design Phase</div>
                     <div class="card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
-                    <a data-aos="fade-up" href="coming-soon.html" class="button-solid purple-bg">Read More</a>
+                    <a data-aos="fade-up" href="design.html" class="button-solid purple-bg">Read More</a>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our team</div>
         <div class="flex-h space-above">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
-        <img data-aos="fade-up" src="images/homepage/4-team-button.png" alt="" class="img-button shadowed space-above">
+        <a href="about.html"><img data-aos="fade-up" href="about.html" src="images/homepage/4-team-button.png" alt="" class="img-button shadowed space-above"></a>
     </div>
 </div>
 
