--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -78,11 +78,11 @@
             <img src="images/research/challenge-icon.svg" alt="" class="card-icon">
             <div class="">
                 <div class="h2">Challenge</div>
-                <p class="paragraph-big">Our team had to understand Liquidnet 5 well enough level to design for Liquidnet’s future, without knowing every detail of it.</p>
+                <p class="paragraph-big">Our team had to understand Liquidnet 5 well enough to design for the product, without knowing every detail of it.</p>
             </div>
         </div>
         <div class="h2 smaller-section">Research Journey</div>
-        <div class="flex-h">The team began learning about the average trader's lifestyle and technology usage. Once we had a better understanding of a traders, we studied Liquidnet's software, Liquidnet 5. Finally, we examined the current possible features and actions within Liquidnet 5.</div>
+        <div class="flex-h">The team began learning about the average trader's lifestyle and technology usage. Once we had a better understanding of traders, we studied Liquidnet's software, Liquidnet 5. Finally, we examined the trader's current usage of Liquidnet 5 features.</div>
         <!--arrows-->
         <div class="smaller-section">
             <div class="flex-h even-wrapper full desktop">
@@ -121,14 +121,16 @@
         <div class="section-title-line red-bg"></div>
         <div class="smaller-section">Traders are core to Liquidnet's success - they execute trades, they analyze research, and they develop algorithms, all benefitting Liquidnet. Understanding trader’s goals and needs tells us where Liquidnet should target traders.</div>
         <!--persona-->
-        <div class="smaller-section flex-h mobile-v" >
+        <div class="persona-section flex-h mobile-v">
+            <div class="card-title">Jeevan the Equity Trader</div>
+        </div>
+        <div class="persona-section flex-h mobile-v" >
             <img src="images/research/persona1.png" class="flexblock-headshot image left"/>
             <div>
-                <div class="card-title">Jeevan the Equity Trader</div>
-                <div class="quote-bubble flex-h tablet-phone-v even-wrapper bg-light-purple">
+                <div class="persona-text flex-h tablet-phone-v even-wrapper bg-light-purple">
                     <div class="h-padding">
                         <div class="b3 label light-purple-text">GOALS</div>
-                        <div class="b3">As an equity trader Jeevan's goals are to improve his performance in his trades, and to create innovative trading strategies.</div>
+                        <div class="quote b3">As an equity trader Jeevan's goals are to improve his performance in his trades, and to create innovative trading strategies.</div>
                     </div>
                     <div class="h-padding">
                         <div class="b3 label light-purple-text">NEEDS</div>
@@ -137,11 +139,13 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section flex-h mobile-v" >
+        <div class="persona-section flex-h mobile-v">
+            <div class="card-title">Jed the Research Analyst</div>
+        </div>
+        <div class="persona-section flex-h mobile-v">
             <img src="images/research/persona2.png" class="flexblock-headshot image left"/>
             <div>
-                <div class="card-title">Jed the Research Analyst</div>
-                <div class="quote-bubble flex-h tablet-phone-v even-wrapper bg-light-purple">
+                <div class="persona-text flex-h tablet-phone-v even-wrapper bg-light-purple">
                     <div class="h-padding">
                         <div class="b3 label light-purple-text">GOALS</div>
                         <div class="b3">Jed wants to provide useful insights on 'good' trading decisions, thus becoming a trusted resource for traders.</div>
@@ -153,11 +157,13 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section flex-h mobile-v">
+        <div class="persona-section flex-h mobile-v">
+            <div class="card-title">Jane the Portfolio Manager</div>
+        </div>
+        <div class="persona-section flex-h mobile-v">
             <img src="images/research/persona3.png" class="flexblock-headshot image left"/>
             <div>
-                <div class="card-title">Jane the Portfolio Manager</div>
-                <div class="quote-bubble flex-h tablet-phone-v even-wrapper bg-light-purple">
+                <div class="persona-text flex-h tablet-phone-v even-wrapper bg-light-purple">
                     <div class="h-padding">
                         <div class="b3 label light-purple-text">GOALS</div>
                         <div class="b3">Jane wants to achieve 'good' portfolio performance with low risk overall, as well as avoid information leakage at all costs.</div>
@@ -169,7 +175,7 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section h2">How do we know about the user?</div>
+        <div class="smaller-section h2">How did we study the user?</div>
         <div class="smaller-section space-above component-title red-text">RESEARCH METHODS</div>
         <div>Only a few niche traders use Liquidnet or take part in dark-pool trading. As such, our team used generative research to understand the elusive dark-pool traders and proxy users that experience trading-esque work. Through these activities, we learned how traders think and act on the job.</div>
         <!-- Carousel 1 -->
