Phrasing and icons changed

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -70,12 +70,12 @@
         <div class="section-title-line red-bg"></div>
         <div class="smaller-section flex-h">In this phase, we collected information about our users and "dark-pool institutional trading", which Liquidnet specializes in. Our work focused on understanding the trader (our user) and their technology (the Liquidnet 5 product).</div>
         <div class="card card-style1 smaller-section">
-            <img src="images/research/problem-icon.svg" alt="" class="card-icon">
+            <img src="images/research/problem-icon.jpg" alt="" class="card-icon">
             <div class="">
                 <div class="h2">Problem</div>
                 <p class="paragraph-big">We need to understand the trader's daily interactions, both good and bad, with Liquidnet.</p>
             </div>
-            <img src="images/research/challenge-icon.svg" alt="" class="card-icon">
+            <img src="images/research/challenge-icon.jpg" alt="" class="card-icon">
             <div class="">
                 <div class="h2">Challenge</div>
                 <p class="paragraph-big">Our team had to understand Liquidnet 5 well enough to design for the product, without knowing every detail of it.</p>
@@ -449,7 +449,7 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section h2">How do we know about the product?</div>
+        <div class="smaller-section h2">How did we study the product?</div>
         <div class="smaller-section component-title red-text">RESEARCH METHODS</div>
         <div>We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
         <!-- Carousal 1 -->
@@ -656,7 +656,7 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section h2">How do we know about the product?</div>
+        <div class="smaller-section h2">How do users currently interact with the product?</div>
         <div class="smaller-section component-title red-text">SYNTHESIS</div>
         <div>To collect our user and product related findings in one location, we developed a service blueprint. Each swimlane designated a different user-type, all of which use Liquidnet through unique workflows.</div>
         <!-- Carousal 1 -->
@@ -825,15 +825,15 @@
         <!--card-->
         <div class="section">
                 <div class="card card-style1">
-                    <img src="images/research/progress-icon.svg" alt="" class="card-icon">
+                    <img src="images/research/progress-icon.jpg" alt="" class="card-icon">
                     <div class="ipad-bin">
-                        <img src="images/ideation/fake-icon.svg" alt="" class="card-icon-ipad">
+                        <img src="images/ideation/progress-icon.jpg" alt="" class="card-icon-ipad">
                         <div class="h2">Progress</div>
                         <p class="paragraph-big">Our team redefined our project brief using the research gathered, and has the financial acumen to now design for our users. </p>
                     </div>
-                    <img src="images/research/learnings-icon.svg" alt="" class="card-icon">
+                    <img src="images/research/learnings-icon.jpg" alt="" class="card-icon">
                     <div class="ipad-bin">
-                        <img src="images/ideation/fake-icon.svg" alt="" class="card-icon-ipad">
+                        <img src="images/ideation/learnings-icon.jpg" alt="" class="card-icon-ipad">
                         <div class="h2">Learnings</div>
                         <p class="paragraph-big">Due to compliance issues, we veered from user-behavior analytics design and focused on redesigning front-end components. </p>
                     </div>
