--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -45,8 +45,8 @@
         <div class="flex-h space-above">
             <img class="image left shadowed" src="images/homepage/1-client-img.png" alt="">
             <div>
-                <p>As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations o the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</p>
-                <img data-aos="fade-up" src="images/homepage/1-client-button.png" alt="" class="img-button shadowed">
+                <p>As the foremost dark-pool trading platform, Liquidnet has led the way for privatized and anonymized trading. Institutional investors like banks and insurance companies rely on Liquidnet for liquidity. Beyond simple trade execution, Liquidnet's technology focuses on providing alpha and trading opportunities. In turn, this connects and empowers traders to achieve their best trades possible.</p>
+                <img data-aos="fade-up" href="https://www.liquidnet.com/" src="images/homepage/1-client-button.png" alt="" class="img-button shadowed">
             </div>
         </div>
     </div>
@@ -84,13 +84,13 @@
 <div class="section">
     <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="section-title">Our process</div>
+        <div class="section-title">Our Process</div>
         <img src="images/homepage/3-process-bar.svg" alt="" style="width: 800px" class="hp-process-bar">
         <div class="flex-h tablet-phone-v even-wrapper">
             <div class="card hp-process-card-wrapper">
                 <img src="images/homepage/3-process-icon1.svg" alt="" class="icon">
                 <div class="card-title red-text">Research Phase</div>
-                <div class="card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
+                <div class="card-text">Our generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
                 <a data-aos="fade-up" href="research.html" class="button-solid red-bg">Read More</a>
             </div>
             <div class="card hp-process-card-wrapper">
@@ -102,7 +102,7 @@
             <div class="card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon3.svg" alt="" class="icon">
                     <div class="card-title purple-text">Design Phase</div>
-                    <div class="card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
+                    <div class="card-text">After settling on viable concepts, our team moved into designing prototypes and guidelines for alert design. Prototypes were tested onsite and remotely.</div>
                     <a data-aos="fade-up" href="design.html" class="button-solid purple-bg">Read More</a>
             </div>
         </div>
@@ -113,9 +113,9 @@
 <div class="section bg-light-purple overflow-top">
     <div class="container">
         <div class="homepage-subtitle">GET TO KNOW</div>
-        <div class="section-title">Our team</div>
-        <div class="flex-h space-above">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
-        <a href="about.html"><img data-aos="fade-up" href="about.html" src="images/homepage/4-team-button.png" alt="" class="img-button shadowed space-above"></a>
+        <div class="section-title">Our Team</div>
+        <div class="flex-h space-above">We are five Carnegie Mellon University students studying in the Master of Human-Computer Interaction program in School of Computer Science. To find out more about us and our roles within the project, please visit the About page.</div>
+        <a href="about.html"><img data-aos="fade-up" href="about.html" src="images/homepage/4-team-button.png" alt="" class="b1 img-button shadowed space-above"></a>
     </div>
 </div>
 
