Home page and research page written content finalized

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -52,9 +52,9 @@
         <div class="h3">Emily Gong</div>
         <div class="b3 label grey-text">CLIENT LEAD</div>
         <div class="person-links">
-          <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="https://www.linkedin.com/in/emilyfgong/"><img src="images/about-icon1.jpg" class="person-link"></a>
+          <a href="#"><img src="images/about-icon2.jpg" class="person-link"></a>
+          <a href="mailto:emily.f.gong@gmail.com"><img src="images/about-icon3.jpg" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
         <div class="b3 label grey-text">QUANT RESEARCH LEAD</div>
         <div class="person-links">
           <a href="https://www.linkedin.com/in/june-ycliu/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="https://www.juneliu.me/"><img src="images/about-icon2.png" class="person-link"></a>
           <a href="mailto:yunchun.june@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
         </div>
       </div>
@@ -123,7 +123,7 @@
         <div class="b3 label grey-text">QUAL RESEARCH LEAD</div>
         <div class="person-links">
           <a href="https://www.linkedin.com/in/yinglisieh/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="https://ysieh.github.io/Portfolio/"><img src="images/about-icon2.png" class="person-link"></a>
           <a href="mailto:yingli.sieh@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
         </div>
       </div>
@@ -133,7 +133,7 @@
       <div class="flex-h">
         <div class="">
           <div class="b3 label light-purple-text">ABOUT ME</div>
-          <div class="b3">My experience in Cognitive Science guides my interest in evaluating digital products and services through studying user behavior.</div>
+          <div class="b3">My experience in Cognitive Science guides my work in evaluating digital products and services by studying user behavior.</div>
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
@@ -152,7 +152,7 @@
         <div class="b3 label grey-text">DEV LEAD</div>
         <div class="person-links">
           <a href="https://www.linkedin.com/in/qian-wang-11513314a/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="http://www.qianwang.design/"><img src="images/about-icon2.png" class="person-link"></a>
           <a href="mailto:wangqian.evelyn@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
         </div>
       </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Geek Girl and Theatre + Movie Enthusiast</div>
+          <div class="b3">Geek Girl plus Theatre & Movie Enthusiast</div>
         </div>
       </div>
     </div>
@@ -193,8 +193,8 @@
         <div class="b3 label grey-text">DESIGN LEAD</div>
         <div class="person-links">
           <a href="https://www.linkedin.com/in/ninaqyang/"><img src="images/about-icon1.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon2.png" class="person-link"></a>
-          <a href="#"><img src="images/about-icon3.png" class="person-link"></a>
+          <a href="http://www.ninaqyang.com/"><img src="images/about-icon2.png" class="person-link"></a>
+          <a href="mailto:ninaqyang@gmail.com"><img src="images/about-icon3.png" class="person-link"></a>
         </div>
       </div>
     </div>
@@ -207,20 +207,20 @@
         </div>
         <div class="small-purple-section">
           <div class="b3 label light-purple-text">ALERT EGO</div>
-          <div class="b3">Cat Lady and Gourmet Bubble Tea Drinker</div>
+          <div class="b3">Cat Lady & Gourmet Bubble Tea Drinker</div>
         </div>
       </div>
     </div>
   </div>
 </div>
+">
 
 <div class="section bg-light-purple">
   <div class="container">
     <div class="section-title">Snippets of Our Journey</div>
     <div class="section-title-line green-bg"></div>
     <div class="flex-h gallery">
-      <div class="blog">
-        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
+      <div class="blog        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
         <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><div class="blog-descript-info">Understanding our Users</div></a>
       </div>
       <div class="blog">
