--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -68,15 +68,15 @@
         <div class="section-title-line purple-bg"></div>
         <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value ot our clients or users.</div>
         <div class="card card-style1 smaller-section">
-            <img src="images/design/problem-icon.svg" alt="" class="card-icon">
+            <img src="images/design/problem-icon.jpg" alt="" class="card-icon">
             <div class="ipad-bin">
-                <img src="images/design/problem-icon.svg" alt="" class="card-icon-ipad">
+                <img src="images/design/problem-icon.jpg" alt="" class="card-icon-ipad">
                 <div class="h2">Problem</div>
                 <p class="paragraph-big">How do we collect and incorporate feedback to make our prototype applicable to trader's alert ecosystem?</p>
             </div>
-            <img src="images/design/challenge-icon.svg" alt="" class="card-icon">
+            <img src="images/design/challenge-icon.jpg" alt="" class="card-icon">
             <div class="ipad-bin">
-                <img src="images/design/challenge-icon.svg" alt="" class="card-icon-ipad">
+                <img src="images/design/challenge-icon.jpg" alt="" class="card-icon-ipad">
                 <div class="h2">Challenge</div>
                 <p class="paragraph-big">How do we design alerts to help attract users to Liquidnet and encourage them to take action in the front-end?</p>
             </div>
@@ -765,15 +765,15 @@
         <div class="section">
             <div class="">
                 <div class="card card-style1">
-                    <img src="images/design/progress-icon.svg" alt="" class="card-icon">
+                    <img src="images/design/progress-icon.jpg" alt="" class="card-icon">
                     <div class="ipad-bin">
-                        <img src="images/design/progress-icon.svg" alt="" class="card-icon-ipad">
+                        <img src="images/design/progress-icon.jpg" alt="" class="card-icon-ipad">
                         <div class="h2">Progress</div>
                         <p class="paragraph-big">Our team redefined our project brief using the research gathered, and has the financial acumen to now design for our users. </p>
                     </div>
-                    <img src="images/design/learnings-icon.svg" alt="" class="card-icon">
+                    <img src="images/design/learnings-icon.jpg" alt="" class="card-icon">
                     <div class="ipad-bin">
-                        <img src="images/design/learnings-icon.svg" alt="" class="card-icon-ipad">
+                        <img src="images/design/learnings-icon.jpg" alt="" class="card-icon-ipad">
                         <div class="h2">Learnings</div>
                         <p class="paragraph-big">Due to compliance issues, we veered from user-behavior analytics design and focused on redesigning front-end components. </p>
                     </div>
