--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -67,14 +67,14 @@
     <div class="container">
         <div class="section-title">Overview</div>
         <div class="section-title-line blue-bg"></div>
-        <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Through this process, we go from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</div>
+        <div class="smaller-section flex-h">This phase consists of ideating, concept testing, and prototyping. Chronologically, this work overlapped with our last phase of research and leaned heavily on the insights from that phase. Through this process, we went from broad concepts to specific designs, selecting the ideas that have the most value to our clients or users.</div>
         <div class="card card-style1 smaller-section">
-            <img src="images/ideation/problem-icon.svg" alt="" class="card-icon">
+            <img src="images/ideation/problem-icon.jpg" alt="" class="card-icon">
             <div class="">
                 <div class="h2">Problem</div>
                 <p class="paragraph-big">We need to understand the trader's daily interactions, both good and bad, with Liquidnet.</p>
             </div>
-            <img src="images/ideation/challenge-icon.svg" alt="" class="card-icon">
+            <img src="images/ideation/challenge-icon.jpg" alt="" class="card-icon">
             <div class="">
                 <div class="h2">Challenge</div>
                 <p class="paragraph-big">Our team had to understand Liquidnet 5 well enough level to design for Liquidnet’s future, without knowing every detail of it.</p>
@@ -745,13 +745,13 @@
         <!--card-->
         <div class="section">
             <div class="card card-style1">
-                <img src="images/ideation/progress-icon.svg" alt="" class="card-icon">
+                <img src="images/ideation/progress-icon.jpg" alt="" class="card-icon">
                 <div class="ipad-bin">
                     <img src="images/ideation/progress-icon.svg" alt="" class="card-icon-ipad">
                     <div class="h2">Progress</div>
                     <p class="paragraph-big">We moved from research to design with ease and were able to incorporate our research into design intelligently.</p>
                 </div>
-                <img src="images/ideation/learnings-icon.svg" alt="" class="card-icon">
+                <img src="images/ideation/learnings-icon.jpg" alt="" class="card-icon">
                 <div class="ipad-bin">
                     <img src="images/ideation/learnings-icon.svg" alt="" class="card-icon-ipad">
                     <div class="h2">Learnings</div>
