--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -31,7 +31,7 @@
 <div class="homepage-banner banner">
     <div class="container">
         <div class="hp-banner-title">Re-shaping a Trader’s Digital Experience</div>
-        <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
+        <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity, analytics, and news. How will Liquidnet continue to communicate their value and deliver alpha to traders through their software?</div>
     </div>
 </div>
 
