Fixed image boxes to be contained and changed responsiveness so the tablet view is unchanged

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="h2 smaller-section">Conceptual Journey</div>
-        <div class="flex-h">Our team began with ideation through design activities meant to bring out any and all ideas related to our brief. From there, we narrowed through concept testing, and finally prototyped the most valuable concepts.</div>
+        <div class="flex-h">Our team began with ideation through design activities meant to brainstorm any ideas related to our project focus. From there, we narrowed through concept testing, and finally prototyped the most valuable concepts.</div>
         <!--arrows-->
         <div class="smaller-section">
             <div class="flex-h even-wrapper full desktop">
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="section-title">Ideating</div>
         <div class="section-title-line blue-bg"></div>
-        <div class="smaller-section">With contextual research and 'How Might We' questions to guide us, our team moved into ideation. We used Crazy Eights to draw out any and all ideas. We then drew the most compelling ideas in storyboarding.</div>
+        <div class="smaller-section">With contextual research and 'How Might We' questions to guide us, our team moved into ideation. We used Crazy Eights to draw out any and all ideas, five of which are shown below. We then drew the most compelling ideas in storyboarding.</div>
         <!-- Carousal 2 -->
         <div class="section">
             <div class="bg-light-blue slideshow-wrapper">
