Debugging responsive image and icon problems

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -213,14 +213,14 @@
     </div>
   </div>
 </div>
-">
 
 <div class="section bg-light-purple">
   <div class="container">
     <div class="section-title">Snippets of Our Journey</div>
     <div class="section-title-line green-bg"></div>
     <div class="flex-h gallery">
-      <div class="blog        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
+      <div class="blog"> 
+        <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><img src="images/design/crazy-eights.jpg" class="blog-img"></a>
         <a href="https://sites.google.com/andrew.cmu.edu/trufflin/sprint-3-finding-ways-to-understand-our-user"><div class="blog-descript-info">Understanding our Users</div></a>
       </div>
       <div class="blog">
