fixed a few bugs

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -241,10 +241,7 @@
 		      <div>
 		        <h2>Testing Urgency</h2>
 		        <b2>Our visuals demo tests for urgency. Topics covered are color, animation, and sound. We tested a low, medium, and 2 high priority alerts.</b2>
-		        <div class="slideshow-img-wrapper">
-		          <img class="slideshow-img" src="images/design/urgency.svg">
-		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
-		        </div>
+                  <img class="slideshow-img" src="images/design/urgency.svg">
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots active" onclick=""></span>
 		          <span class="slideshow-dots" onclick=""></span>
@@ -486,7 +483,6 @@
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
 		        <div class="slideshow-img-wrapper">
 		          <img class="slideshow-img" src="images/research/slideshow-pic1.png">
-		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
 		        </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -652,7 +648,6 @@
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
 		        <div class="slideshow-img-wrapper">
 		          <img class="slideshow-img" src="images/research/slideshow-pic1.png">
-		          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
 		        </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -696,9 +691,8 @@
 		<div class="smaller-section component-title purple-text">GUIDELINES</div>
         <div>To collect our user and product related findings in one location, we developed a service blueprint. Each swimlane designated a different user-type, all of which use Liquidnet through unique workflows.</div>
         <div class="section container center">
-        <div class="h2">See our guidelines:</div>
-        <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo">
-    </div>
+            <a target="_blank" href="https://wangqianeve.github.io/CMU-MHCI-Liquidnet/"><img class="b1 img-button" src="images/buttons/button-guidelines.svg" alt="Trufflin Logo"></a>
+        </div>
 	</div>
 
 <!--Takeaways-->
